# itask_flask

./: .gitignore  Dockerfile  README.md  app.py  itask.postman_collection.json  pyproject.toml
api/: __init__.py
api/components/base/: handler.py
api/components/projects/: handler.py  model.py  schema.py
api/components/tasks/: handler.py  model.py  schema.py
api/components/users/: handler.py  model.py  schema.py
api/config/: auth.py  config.py  loader.py  migrate.py  routes.py
api/utils/: __init__.py  errors.py  logger.py
